--- a/GrAssSolution/eStore/appsettings.json
+++ b/GrAssSolution/eStore/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnectionString": "Server=(local);Uid=sa;Pwd=12345;Database=eStore;Encrypt=false;Trusted_Connection=true;TrustServerCertificate=True"
+  }
 }
